# Open3D_Tensor_Assign_Issue

./: CMakeLists.txt  README.md  main.cpp
